See #11. Continue work on config assistant

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,7 +25,7 @@ label {
 }
 
 .card-body pre {
-  height: 10rem;
+  min-height: 10rem;
 }
 
 .text-left {
@@ -38,6 +38,8 @@ label {
 
 .sideNav {
   background-color: #ffffff;
+  max-height: 800px;
+  overflow-y: scroll;
 }
 
 .sideNav a {
