--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,9 @@ label {
   cursor: pointer;
   display: inline-block;
 }
+.card.card-fluid {
+  width: 100%;
+}
 
 .border-success {
   border-width: 2px;
@@ -24,8 +27,8 @@ label {
   border-color: #3498DB !important;
 }
 
-.card:nth-child(2), .card:nth-child(3n+5) {
-  margin: 0px 25px;
+.card:nth-child(n+2) {
+  margin-left: 20px;
 }
 
 .card-header {
@@ -33,12 +36,13 @@ label {
 }
 
 .card-body {
-  height: 250px;
+  max-height: 200px;
   overflow-x: scroll;
+  padding: 0px;
 }
 
 .card-body pre {
-  min-height: 10rem;
+  margin-bottom: 0px;
 }
 
 .text-left {
@@ -73,4 +77,9 @@ label {
 
 .multiple {
   height: 200px;
+}
+
+.progress {
+  height: 1rem;
+  margin: 1rem;
 }
