--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,8 +68,14 @@ label {
 }
 
 .side-menu {
-  max-height: 1000px;
+  /* max-height: 1000px; */
+  height: calc(100vh - 142px);
   overflow-y: scroll;
+}
+
+.option-content {
+  height: calc(100vh - 260px);
+  overflow: auto;
 }
 
 .languageOptionGroup:nth-child(2n+1) {
@@ -107,4 +113,16 @@ label {
 
 .previewCard .card-body pre {
   height: auto;
+}
+
+.jumbo {
+  background-color: #ecf0f1;
+}
+
+footer {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  height: 68px;
+  background-color: #ffffff;
 }
