--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -55,8 +55,7 @@ label {
 }
 
 .list-group-item {
-  min-width: 340px;
-  max-width: 340px;
+  width: 300px;
 }
 
 .inline, .react-download-container {
@@ -68,13 +67,12 @@ label {
 }
 
 .side-menu {
-  /* max-height: 1000px; */
-  height: calc(100vh - 142px);
+  height: calc(100vh - 94px);
   overflow-y: scroll;
 }
 
 .option-content {
-  height: calc(100vh - 260px);
+  height: calc(100vh - 196px);
   overflow: auto;
 }
 
@@ -119,10 +117,24 @@ label {
   background-color: #ecf0f1;
 }
 
-footer {
+.footer {
   position: sticky;
   bottom: 0;
-  width: 100%;
-  height: 68px;
+  height: 46px;
   background-color: #ffffff;
+}
+
+.step-buttons {
+  float: left;
+}
+
+.progress {
+  position: relative;
+  margin: 0px;
+  top: 5px;
+  font-size: 14px;
+}
+
+.progress, .progress-bar {
+  height: 36px;
 }
